Commit 8 - Added project.html page and content

--- a/resume_page/styles.css
+++ b/resume_page/styles.css
@@ -15,3 +15,25 @@ h3 {
 ul li {
 list-style-type: none;
 }
+
+.column {
+  margin:0 auto;
+  width:33.33%;
+  float: left;
+  padding:2px;
+  text-align: center;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.one {
+  background-color: blue;
+}
+
+.three {
+  background: pink;
+}
